Se agregan estilos en los 3 primeros ejercicios --falta 1 bandera

--- a/modelo1.html
+++ b/modelo1.html
@@ -1,13 +1,98 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de Cajas -1</title>
+    <!--<link rel="stylesheet" type="text/css" href="assets/css/estilo1.css">-->
+    <style media="screen" type="text/css">
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        .main {
+            margin: 5px;
+            display: flex;
+        }
+
+        .box {
+            border: 0px solid #808080;
+            height: 100px;
+            width: 25%;
+            padding: 5px;
+            max-width: 100%;
+        }
+
+        .parrafo {
+            display: inline-block;
+        }
+        .navbar{
+            background-color: green;
+            position: sticky;
+            top: 0px;
+        }
+    </style>
 </head>
+<title>Modelo de Cajas -1</title>
+</head>
+
 <body>
-    <h1>Ejercicio Numero 1</h1>
-    
+    <nav class="navbar">
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur possimus vitae qui eligendi error culpa quae veritatis illo sapiente vero quo, nisi molestiae quia soluta quasi aliquid labore velit repudiandae!<br>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur possimus vitae qui eligendi error culpa quae veritatis illo sapiente vero quo, nisi molestiae quia soluta quasi aliquid labore velit repudiandae!
+        </p>
+    </nav>
+    <section class="parrafo">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis quia molestias placeat magnam. Consequuntur possimus et alias repudiandae libero doloribus eum expedita eius. Nihil tempore eos, soluta quisquam aspernatur magni.
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas totam odio autem molestiae quibusdam, quis doloribus nemo maxime numquam nisi consectetur iste, deleniti dolorum necessitatibus, quaerat ea obcaecati
+        aliquid debitis.
+            <br>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae eligendi ipsam ipsum dolore sit? Quas eveniet,sit quibusdam rerum expedita delectus rem a dolor suscipit cumque nam reprehenderit id
+        repellendus!.<br>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas totam odio autem molestiae quibusdam, quis doloribus nemo maxime numquam nisi consectetur iste, deleniti dolorum necessitatibus, quaerat ea obcaecati
+        aliquid debitis.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis quia molestias placeat magnam. Consequuntur possimus et alias repudiandae libero doloribus eum expedita eius. Nihil tempore eos, soluta quisquam aspernatur magni.
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas totam odio autem molestiae quibusdam, quis doloribus nemo maxime numquam nisi consectetur iste, deleniti dolorum necessitatibus, quaerat ea obcaecati
+        aliquid debitis.
+            <br>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae eligendi ipsam ipsum dolore sit? Quas eveniet,sit quibusdam rerum expedita delectus rem a dolor suscipit cumque nam reprehenderit id
+        repellendus!.<br>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas totam odio autem molestiae quibusdam, quis doloribus nemo maxime numquam nisi consectetur iste, deleniti dolorum necessitatibus, quaerat ea obcaecati
+        aliquid debitis.
+        </p>
+    </section>
+    <section class="main">
+        <section class="box">
+            <img src="assets/img/desafio-logo.jpg" alt="logo-latam" srcset="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae eligendi ipsam ipsum dolore sit? Quas
+                eveniet, sit quibusdam rerum expedita delectus rem a dolor suscipit cumque nam reprehenderit id
+                repellendus!</p>
+        </section>
+        <section class="box">
+            <img src="assets/img/desafio-logo.jpg" alt="logo-latam" srcset="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae eligendi ipsam ipsum dolore sit? Quas
+                eveniet, sit quibusdam rerum expedita delectus rem a dolor suscipit cumque nam reprehenderit id
+                repellendus!</p>
+        </section>
+        <section class="box">
+            <img src="assets/img/desafio-logo.jpg" alt="logo-latam" srcset="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae eligendi ipsam ipsum dolore sit?
+                Quaseveniet, sit quibusdam rerum expedita delectus rem a dolor suscipit cumque nam reprehenderit id
+                repellendus!
+            </p>
+        </section>
+        <section class="box">
+            <img src="assets/img/desafio-logo.jpg" alt="logo-latam" srcset="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae eligendi ipsam ipsum dolore sit? Quas
+                eveniet, sit quibusdam rerum expedita delectus rem a dolor suscipit cumque nam reprehenderit id
+                repellendus!</p>
+        </section>
+    </section>
+
+
 </body>
+
 </html>
