Se sube el desafio 9

--- a/modelo1.html
+++ b/modelo1.html
@@ -34,6 +34,7 @@
             top: 0px;
         }
     </style>
+    <!--Por el momento estan las tres tares en este archivo a, b, c-->
 </head>
 <title>Modelo de Cajas -1</title>
 </head>
