--- a/modelo4.html
+++ b/modelo4.html
@@ -16,6 +16,7 @@
         .main {
             background-color: #B0CCAB;
             padding: 50px;
+            margin: 0px 320px 0px 320px;
         }
 
         .main__paragraph {
